05-Metal&Traefik/05-Whoami/03-Whoami-Stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deploymenti
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-deploymenti
  template:
    metadata:
      labels:
        app: whoami-deploymenti
    spec:
      containers:
      - name: whoami-konteyneri
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-servisi
  labels:
    app: whoami-deploymenti
spec:
  type: LoadBalancer
  selector:
    app: whoami-deploymenti
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.techakademi.com`)
      kind: Rule
      services:
        - name: whoami-servisi
          port: 80
