05-Metal&Traefik/05-Whoami/04-Whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: whoami.techakademi.com
    http:
      paths:
      - backend:
          service:
            name: whoami-servisi
            port:
              number: 80
        path: /
        pathType: Prefix
